--- a/style.css
+++ b/style.css
@@ -47,18 +47,15 @@ margin-top: 20px;
     width: 50%;
     padding-right: 5%;
 }
-/* .details{
-    padding-top: 200px;
-} */
+
 
 .about-section{
     padding-top: 200px;
 }
 
 .recipe-details p{
-    display: flex;
-    justify-content: center;
-    margin-left: 600px;
+    text-align: center;
+   
 }
 
 .title{
@@ -70,13 +67,13 @@ margin-top: 20px;
 .img-part{
     display: flex;
     /* background-color: rgb(235, 235, 235); */
-    justify-content: center;
-    flex-direction: row;
+    /* justify-content: center; */
+    /* flex-direction: row; */
   }
 
 
   .card{
-    box-shadow: 3px 4px 10px;
+    box-shadow: 8px 8px 10px rgb(216, 215, 215);
     /* margin-left: 40px; */
     margin-top: 50px;
     border-radius: 15px;
@@ -85,7 +82,7 @@ margin-top: 20px;
 
   .img-style{
     width: 90%;
-    justify-content: space-around;
+    justify-content: space-evenly;
     border-radius: 20px;
     padding-top: 20px;
     padding-left: 20px;
@@ -96,4 +93,24 @@ margin-top: 20px;
   .img-body{
     padding-left: 15px;
 }
+
+
+
+.network{
+    padding-top: 20px;
+    text-align: center;
+    color: white;
+}
+
+.phrase{
+    padding-top: 10px;
+    text-align: center;
+    color: white;
+}
+
+footer{
+    background-color: black;
+    padding-bottom: 40px;
+}
+
 
