--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@ section{
 }
 .first-part img{
     width: 80%;
+    margin-top: 20px;
+    margin-left: 10px;
 }
 
 a{
@@ -115,17 +117,57 @@ footer{
 .food-gallery{
     margin-left: 120px;
     margin-right: 120px;
+    margin-bottom: 30px;
+    
 }
 
 .box{
     display: block;
-    float: left;
+    /* float: left; */
     width: 40%;
-    padding: 30px;
+    padding: 40px;
+}
+.gallery-one{
+    display: flex;
+    padding-top: 60px;
+}
+.gallery2{
+    display: flex; 
+    text-align: center;
+}
+.box1{
+    display: block;
+    /* float: left; */
+    width: 40%;
+    padding: 40px;
+    margin-bottom: 50px;
 }
 
 img{
     width: 130%;
+}
+
+.form{
+    text-align: center;
+}
+.form-control{
+    height: 30px;
+    width: 20%;
+}
+
+
+.submit-btn{
+    background-image:linear-gradient(to right,#FB9149 ,#FD4E2F );
+    padding: 10px 20px;
+    border-radius: 10px;
+    border: none;
+    margin-left: 10px;
+    /* margin-top: 20px;  */
+}
+
+.last-head{
+    text-align: center;
+    color: white;
 }
 
 
